<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RecipeStepDetailFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="@dimen/length_0"
            android:layout_height="@dimen/exo_player_height"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playerView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/instructionsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/material_text_body2"
                android:layout_marginTop="@dimen/length_8"
                android:padding="@dimen/length_4"
                tools:text="@string/fake_text" />

        </ScrollView>

        <ImageView
            android:id="@+id/previousStep"
            android:layout_width="@dimen/navigation_image_size"
            android:layout_height="@dimen/navigation_image_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/recipe_step_details_button_previous_label"/>

        <ImageView
            android:id="@+id/nextStep"
            android:layout_width="@dimen/navigation_image_size"
            android:layout_height="@dimen/navigation_image_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            android:contentDescription="@string/recipe_step_details_button_next_label"/>

    </android.support.constraint.ConstraintLayout>
</layout>